cmake_minimum_required(VERSION 2.8)

SET(TARGET_NAME	lc-out)
PROJECT(${TARGET_NAME})

SET(CMAKE_CXX_COMPILER "g++.exe")
SET(CMAKE_C_COMPILER "gcc.exe")

SET(CMAKE_C_FLAGS  "-g")
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ")

FILE(GLOB_RECURSE SRC_LIST ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.c)
FILE(GLOB_RECURSE REMOVE_CMAKE ${CMAKE_CURRENT_LIST_DIR}/cmake-build-debug/* ${CMAKE_CURRENT_LIST_DIR}/build/*)
LIST(REMOVE_ITEM SRC_LIST ${REMOVE_CMAKE})

MESSAGE("${CMAKE_CURRENT_LIST_DIR}")
MESSAGE("SRC_LIST is:" ${SRC_LIST})

ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})

